Update to fix text align on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ p {
 
 @media (max-width: 1028px) {
 
-  #title {
+  #title .container-fluid {
     text-align: center;
     padding-top: 3%
   }
